MyP/y.output
Terminaux inutilisés dans la grammaire

    ARR


Grammaire

    0 $accept: prog $end

    1 prog: prog_head prog_body

    2 prog_head: PRG ID PV

    3 $@1: %empty

    4 prog_body: opt_funs $@1 opt_vars BIN inst_list BOUT DOT

    5 opt_vars: var decl_list
    6         | %empty

    7 var: VAR

    8 decl_list: decl_list decl
    9          | decl

   10 decl: ID CLN type PV

   11 type: typename

   12 typename: INT
   13         | FLOAT
   14         | VOID

   15 opt_funs: opt_funs function
   16         | %empty

   17 function: fun_head fun_body

   18 fun_head: fun fun_name opt_arg CLN type

   19 fun: FUN

   20 fun_name: ID

   21 opt_arg: PO arg_list PF
   22        | %empty

   23 arg_list: arg vir arg_list
   24         | arg

   25 arg: ID CLN type

   26 vir: VIR

   27 fun_body: opt_vars BIN inst_list BOUT PV

   28 inst_list: inst_list inst PV
   29          | inst PV

   30 $@2: %empty

   31 inst: $@2 opt_vars block_begin inst_list block_end
   32     | aff
   33     | ret
   34     | cond
   35     | loop

   36 block_begin: BIN

   37 block_end: BOUT

   38 aff: ida AFF exp

   39 ida: ID

   40 cond: if bool_cond inst elsop

   41 elsop: else inst
   42      | %empty

   43 bool_cond: PO exp PF

   44 if: IF

   45 else: ELSE

   46 loop: while while_cond inst

   47 while_cond: PO exp PF

   48 while: WHILE

   49 ret: exp

   50 exp: MOINS exp
   51    | exp PLUS exp
   52    | exp MOINS exp
   53    | exp STAR exp
   54    | exp DIV exp
   55    | PO exp PF
   56    | ID
   57    | app
   58    | NUM
   59    | DEC
   60    | NOT exp
   61    | exp INF exp
   62    | exp SUP exp
   63    | exp EQUAL exp
   64    | exp DIFF exp
   65    | exp AND exp
   66    | exp OR exp

   67 app: fid PO args PF

   68 fid: ID

   69 args: arglist
   70     | %empty

   71 arglist: arglist VIR exp
   72        | exp


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    NUM <int_value> (258) 58
    DEC <float_value> (259) 59
    PRG (260) 2
    FUN (261) 19
    VAR (262) 7
    BIN (263) 4 27 36
    BOUT (264) 4 27 37
    AFF (265) 38
    CLN (266) 10 18 25
    DOT (267) 4
    INT (268) 12
    FLOAT (269) 13
    VOID (270) 14
    ID <string_value> (271) 2 10 20 25 39 56 68
    PO (272) 21 43 47 55 67
    PF (273) 21 43 47 55 67
    PV (274) 2 10 27 28 29
    VIR (275) 26 71
    IF <label_value> (276) 44
    ELSE <label_value> (277) 45
    WHILE <label_value> (278) 48
    AND <label_value> (279) 65
    OR <label_value> (280) 66
    NOT <label_value> (281) 60
    DIFF <label_value> (282) 64
    EQUAL <label_value> (283) 63
    SUP <label_value> (284) 62
    INF <label_value> (285) 61
    PLUS (286) 51
    MOINS (287) 50 52
    STAR (288) 53
    DIV (289) 54
    ARR (290)
    IFX (291)
    UNA (292)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (38)
        à gauche: 0
    prog (39)
        à gauche: 1
        à droite: 0
    prog_head (40)
        à gauche: 2
        à droite: 1
    prog_body (41)
        à gauche: 4
        à droite: 1
    $@1 (42)
        à gauche: 3
        à droite: 4
    opt_vars (43)
        à gauche: 5 6
        à droite: 4 27 31
    var (44)
        à gauche: 7
        à droite: 5
    decl_list (45)
        à gauche: 8 9
        à droite: 5 8
    decl (46)
        à gauche: 10
        à droite: 8 9
    type <type_value> (47)
        à gauche: 11
        à droite: 10 18 25
    typename <type_value> (48)
        à gauche: 12 13 14
        à droite: 11
    opt_funs (49)
        à gauche: 15 16
        à droite: 4 15
    function (50)
        à gauche: 17
        à droite: 15
    fun_head <string_value> (51)
        à gauche: 18
        à droite: 17
    fun (52)
        à gauche: 19
        à droite: 18
    fun_name <string_value> (53)
        à gauche: 20
        à droite: 18
    opt_arg (54)
        à gauche: 21 22
        à droite: 18
    arg_list (55)
        à gauche: 23 24
        à droite: 21 23
    arg <string_value> (56)
        à gauche: 25
        à droite: 23 24
    vir (57)
        à gauche: 26
        à droite: 23
    fun_body (58)
        à gauche: 27
        à droite: 17
    inst_list (59)
        à gauche: 28 29
        à droite: 4 27 28 31
    inst (60)
        à gauche: 31 32 33 34 35
        à droite: 28 29 40 41 46
    $@2 (61)
        à gauche: 30
        à droite: 31
    block_begin (62)
        à gauche: 36
        à droite: 31
    block_end (63)
        à gauche: 37
        à droite: 31
    aff (64)
        à gauche: 38
        à droite: 32
    ida <string_value> (65)
        à gauche: 39
        à droite: 38
    cond (66)
        à gauche: 40
        à droite: 34
    elsop (67)
        à gauche: 41 42
        à droite: 40
    bool_cond (68)
        à gauche: 43
        à droite: 40
    if <label_value> (69)
        à gauche: 44
        à droite: 40
    else (70)
        à gauche: 45
        à droite: 41
    loop (71)
        à gauche: 46
        à droite: 35
    while_cond (72)
        à gauche: 47
        à droite: 46
    while <label_value> (73)
        à gauche: 48
        à droite: 46
    ret (74)
        à gauche: 49
        à droite: 33
    exp <type_value> (75)
        à gauche: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        à droite: 38 43 47 49 50 51 52 53 54 55 60 61 62 63 64 65 66 71 72
    app (76)
        à gauche: 67
        à droite: 57
    fid <string_value> (77)
        à gauche: 68
        à droite: 67
    args (78)
        à gauche: 69 70
        à droite: 67
    arglist (79)
        à gauche: 71 72
        à droite: 69 71


État 0

    0 $accept: • prog $end

    PRG  décalage et aller à l'état 1

    prog       aller à l'état 2
    prog_head  aller à l'état 3


État 1

    2 prog_head: PRG • ID PV

    ID  décalage et aller à l'état 4


État 2

    0 $accept: prog • $end

    $end  décalage et aller à l'état 5


État 3

    1 prog: prog_head • prog_body

    $défaut  réduction par utilisation de la règle 16 (opt_funs)

    prog_body  aller à l'état 6
    opt_funs   aller à l'état 7


État 4

    2 prog_head: PRG ID • PV

    PV  décalage et aller à l'état 8


État 5

    0 $accept: prog $end •

    $défaut  accepter


État 6

    1 prog: prog_head prog_body •

    $défaut  réduction par utilisation de la règle 1 (prog)


État 7

    4 prog_body: opt_funs • $@1 opt_vars BIN inst_list BOUT DOT
   15 opt_funs: opt_funs • function

    FUN  décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 3 ($@1)

    $@1       aller à l'état 10
    function  aller à l'état 11
    fun_head  aller à l'état 12
    fun       aller à l'état 13


État 8

    2 prog_head: PRG ID PV •

    $défaut  réduction par utilisation de la règle 2 (prog_head)


État 9

   19 fun: FUN •

    $défaut  réduction par utilisation de la règle 19 (fun)


État 10

    4 prog_body: opt_funs $@1 • opt_vars BIN inst_list BOUT DOT

    VAR  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 6 (opt_vars)

    opt_vars  aller à l'état 15
    var       aller à l'état 16


État 11

   15 opt_funs: opt_funs function •

    $défaut  réduction par utilisation de la règle 15 (opt_funs)


État 12

   17 function: fun_head • fun_body

    VAR  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 6 (opt_vars)

    opt_vars  aller à l'état 17
    var       aller à l'état 16
    fun_body  aller à l'état 18


État 13

   18 fun_head: fun • fun_name opt_arg CLN type

    ID  décalage et aller à l'état 19

    fun_name  aller à l'état 20


État 14

    7 var: VAR •

    $défaut  réduction par utilisation de la règle 7 (var)


État 15

    4 prog_body: opt_funs $@1 opt_vars • BIN inst_list BOUT DOT

    BIN  décalage et aller à l'état 21


État 16

    5 opt_vars: var • decl_list

    ID  décalage et aller à l'état 22

    decl_list  aller à l'état 23
    decl       aller à l'état 24


État 17

   27 fun_body: opt_vars • BIN inst_list BOUT PV

    BIN  décalage et aller à l'état 25


État 18

   17 function: fun_head fun_body •

    $défaut  réduction par utilisation de la règle 17 (function)


État 19

   20 fun_name: ID •

    $défaut  réduction par utilisation de la règle 20 (fun_name)


État 20

   18 fun_head: fun fun_name • opt_arg CLN type

    PO  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 22 (opt_arg)

    opt_arg  aller à l'état 27


État 21

    4 prog_body: opt_funs $@1 opt_vars BIN • inst_list BOUT DOT

    NUM    décalage et aller à l'état 28
    DEC    décalage et aller à l'état 29
    ID     décalage et aller à l'état 30
    PO     décalage et aller à l'état 31
    IF     décalage et aller à l'état 32
    WHILE  décalage et aller à l'état 33
    NOT    décalage et aller à l'état 34
    MOINS  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 30 ($@2)

    inst_list  aller à l'état 36
    inst       aller à l'état 37
    $@2        aller à l'état 38
    aff        aller à l'état 39
    ida        aller à l'état 40
    cond       aller à l'état 41
    if         aller à l'état 42
    loop       aller à l'état 43
    while      aller à l'état 44
    ret        aller à l'état 45
    exp        aller à l'état 46
    app        aller à l'état 47
    fid        aller à l'état 48


État 22

   10 decl: ID • CLN type PV

    CLN  décalage et aller à l'état 49


État 23

    5 opt_vars: var decl_list •
    8 decl_list: decl_list • decl

    ID  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 5 (opt_vars)

    decl  aller à l'état 50


État 24

    9 decl_list: decl •

    $défaut  réduction par utilisation de la règle 9 (decl_list)


État 25

   27 fun_body: opt_vars BIN • inst_list BOUT PV

    NUM    décalage et aller à l'état 28
    DEC    décalage et aller à l'état 29
    ID     décalage et aller à l'état 30
    PO     décalage et aller à l'état 31
    IF     décalage et aller à l'état 32
    WHILE  décalage et aller à l'état 33
    NOT    décalage et aller à l'état 34
    MOINS  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 30 ($@2)

    inst_list  aller à l'état 51
    inst       aller à l'état 37
    $@2        aller à l'état 38
    aff        aller à l'état 39
    ida        aller à l'état 40
    cond       aller à l'état 41
    if         aller à l'état 42
    loop       aller à l'état 43
    while      aller à l'état 44
    ret        aller à l'état 45
    exp        aller à l'état 46
    app        aller à l'état 47
    fid        aller à l'état 48


État 26

   21 opt_arg: PO • arg_list PF

    ID  décalage et aller à l'état 52

    arg_list  aller à l'état 53
    arg       aller à l'état 54


État 27

   18 fun_head: fun fun_name opt_arg • CLN type

    CLN  décalage et aller à l'état 55


État 28

   58 exp: NUM •

    $défaut  réduction par utilisation de la règle 58 (exp)


État 29

   59 exp: DEC •

    $défaut  réduction par utilisation de la règle 59 (exp)


État 30

   39 ida: ID •
   56 exp: ID •
   68 fid: ID •

    AFF      réduction par utilisation de la règle 39 (ida)
    PO       réduction par utilisation de la règle 68 (fid)
    $défaut  réduction par utilisation de la règle 56 (exp)


État 31

   55 exp: PO • exp PF

    NUM    décalage et aller à l'état 28
    DEC    décalage et aller à l'état 29
    ID     décalage et aller à l'état 56
    PO     décalage et aller à l'état 31
    NOT    décalage et aller à l'état 34
    MOINS  décalage et aller à l'état 35

    exp  aller à l'état 57
    app  aller à l'état 47
    fid  aller à l'état 48


État 32

   44 if: IF •

    $défaut  réduction par utilisation de la règle 44 (if)


État 33

   48 while: WHILE •

    $défaut  réduction par utilisation de la règle 48 (while)


État 34

   60 exp: NOT • exp

    NUM    décalage et aller à l'état 28
    DEC    décalage et aller à l'état 29
    ID     décalage et aller à l'état 56
    PO     décalage et aller à l'état 31
    NOT    décalage et aller à l'état 34
    MOINS  décalage et aller à l'état 35

    exp  aller à l'état 58
    app  aller à l'état 47
    fid  aller à l'état 48


État 35

   50 exp: MOINS • exp

    NUM    décalage et aller à l'état 28
    DEC    décalage et aller à l'état 29
    ID     décalage et aller à l'état 56
    PO     décalage et aller à l'état 31
    NOT    décalage et aller à l'état 34
    MOINS  décalage et aller à l'état 35

    exp  aller à l'état 59
    app  aller à l'état 47
    fid  aller à l'état 48


État 36

    4 prog_body: opt_funs $@1 opt_vars BIN inst_list • BOUT DOT
   28 inst_list: inst_list • inst PV

    NUM    décalage et aller à l'état 28
    DEC    décalage et aller à l'état 29
    BOUT   décalage et aller à l'état 60
    ID     décalage et aller à l'état 30
    PO     décalage et aller à l'état 31
    IF     décalage et aller à l'état 32
    WHILE  décalage et aller à l'état 33
    NOT    décalage et aller à l'état 34
    MOINS  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 30 ($@2)

    inst   aller à l'état 61
    $@2    aller à l'état 38
    aff    aller à l'état 39
    ida    aller à l'état 40
    cond   aller à l'état 41
    if     aller à l'état 42
    loop   aller à l'état 43
    while  aller à l'état 44
    ret    aller à l'état 45
    exp    aller à l'état 46
    app    aller à l'état 47
    fid    aller à l'état 48


État 37

   29 inst_list: inst • PV

    PV  décalage et aller à l'état 62


État 38

   31 inst: $@2 • opt_vars block_begin inst_list block_end

    VAR  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 6 (opt_vars)

    opt_vars  aller à l'état 63
    var       aller à l'état 16


État 39

   32 inst: aff •

    $défaut  réduction par utilisation de la règle 32 (inst)


État 40

   38 aff: ida • AFF exp

    AFF  décalage et aller à l'état 64


État 41

   34 inst: cond •

    $défaut  réduction par utilisation de la règle 34 (inst)


État 42

   40 cond: if • bool_cond inst elsop

    PO  décalage et aller à l'état 65

    bool_cond  aller à l'état 66


État 43

   35 inst: loop •

    $défaut  réduction par utilisation de la règle 35 (inst)


État 44

   46 loop: while • while_cond inst

    PO  décalage et aller à l'état 67

    while_cond  aller à l'état 68


État 45

   33 inst: ret •

    $défaut  réduction par utilisation de la règle 33 (inst)


État 46

   49 ret: exp •
   51 exp: exp • PLUS exp
   52    | exp • MOINS exp
   53    | exp • STAR exp
   54    | exp • DIV exp
   61    | exp • INF exp
   62    | exp • SUP exp
   63    | exp • EQUAL exp
   64    | exp • DIFF exp
   65    | exp • AND exp
   66    | exp • OR exp

    AND    décalage et aller à l'état 69
    OR     décalage et aller à l'état 70
    DIFF   décalage et aller à l'état 71
    EQUAL  décalage et aller à l'état 72
    SUP    décalage et aller à l'état 73
    INF    décalage et aller à l'état 74
    PLUS   décalage et aller à l'état 75
    MOINS  décalage et aller à l'état 76
    STAR   décalage et aller à l'état 77
    DIV    décalage et aller à l'état 78

    $défaut  réduction par utilisation de la règle 49 (ret)


État 47

   57 exp: app •

    $défaut  réduction par utilisation de la règle 57 (exp)


État 48

   67 app: fid • PO args PF

    PO  décalage et aller à l'état 79


État 49

   10 decl: ID CLN • type PV

    INT    décalage et aller à l'état 80
    FLOAT  décalage et aller à l'état 81
    VOID   décalage et aller à l'état 82

    type      aller à l'état 83
    typename  aller à l'état 84


État 50

    8 decl_list: decl_list decl •

    $défaut  réduction par utilisation de la règle 8 (decl_list)


État 51

   27 fun_body: opt_vars BIN inst_list • BOUT PV
   28 inst_list: inst_list • inst PV

    NUM    décalage et aller à l'état 28
    DEC    décalage et aller à l'état 29
    BOUT   décalage et aller à l'état 85
    ID     décalage et aller à l'état 30
    PO     décalage et aller à l'état 31
    IF     décalage et aller à l'état 32
    WHILE  décalage et aller à l'état 33
    NOT    décalage et aller à l'état 34
    MOINS  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 30 ($@2)

    inst   aller à l'état 61
    $@2    aller à l'état 38
    aff    aller à l'état 39
    ida    aller à l'état 40
    cond   aller à l'état 41
    if     aller à l'état 42
    loop   aller à l'état 43
    while  aller à l'état 44
    ret    aller à l'état 45
    exp    aller à l'état 46
    app    aller à l'état 47
    fid    aller à l'état 48


État 52

   25 arg: ID • CLN type

    CLN  décalage et aller à l'état 86


État 53

   21 opt_arg: PO arg_list • PF

    PF  décalage et aller à l'état 87


État 54

   23 arg_list: arg • vir arg_list
   24         | arg •

    VIR  décalage et aller à l'état 88

    $défaut  réduction par utilisation de la règle 24 (arg_list)

    vir  aller à l'état 89


État 55

   18 fun_head: fun fun_name opt_arg CLN • type

    INT    décalage et aller à l'état 80
    FLOAT  décalage et aller à l'état 81
    VOID   décalage et aller à l'état 82

    type      aller à l'état 90
    typename  aller à l'état 84


État 56

   56 exp: ID •
   68 fid: ID •

    PO       réduction par utilisation de la règle 68 (fid)
    $défaut  réduction par utilisation de la règle 56 (exp)


État 57

   51 exp: exp • PLUS exp
   52    | exp • MOINS exp
   53    | exp • STAR exp
   54    | exp • DIV exp
   55    | PO exp • PF
   61    | exp • INF exp
   62    | exp • SUP exp
   63    | exp • EQUAL exp
   64    | exp • DIFF exp
   65    | exp • AND exp
   66    | exp • OR exp

    PF     décalage et aller à l'état 91
    AND    décalage et aller à l'état 69
    OR     décalage et aller à l'état 70
    DIFF   décalage et aller à l'état 71
    EQUAL  décalage et aller à l'état 72
    SUP    décalage et aller à l'état 73
    INF    décalage et aller à l'état 74
    PLUS   décalage et aller à l'état 75
    MOINS  décalage et aller à l'état 76
    STAR   décalage et aller à l'état 77
    DIV    décalage et aller à l'état 78


État 58

   51 exp: exp • PLUS exp
   52    | exp • MOINS exp
   53    | exp • STAR exp
   54    | exp • DIV exp
   60    | NOT exp •
   61    | exp • INF exp
   62    | exp • SUP exp
   63    | exp • EQUAL exp
   64    | exp • DIFF exp
   65    | exp • AND exp
   66    | exp • OR exp

    $défaut  réduction par utilisation de la règle 60 (exp)


État 59

   50 exp: MOINS exp •
   51    | exp • PLUS exp
   52    | exp • MOINS exp
   53    | exp • STAR exp
   54    | exp • DIV exp
   61    | exp • INF exp
   62    | exp • SUP exp
   63    | exp • EQUAL exp
   64    | exp • DIFF exp
   65    | exp • AND exp
   66    | exp • OR exp

    $défaut  réduction par utilisation de la règle 50 (exp)


État 60

    4 prog_body: opt_funs $@1 opt_vars BIN inst_list BOUT • DOT

    DOT  décalage et aller à l'état 92


État 61

   28 inst_list: inst_list inst • PV

    PV  décalage et aller à l'état 93


État 62

   29 inst_list: inst PV •

    $défaut  réduction par utilisation de la règle 29 (inst_list)


État 63

   31 inst: $@2 opt_vars • block_begin inst_list block_end

    BIN  décalage et aller à l'état 94

    block_begin  aller à l'état 95


État 64

   38 aff: ida AFF • exp

    NUM    décalage et aller à l'état 28
    DEC    décalage et aller à l'état 29
    ID     décalage et aller à l'état 56
    PO     décalage et aller à l'état 31
    NOT    décalage et aller à l'état 34
    MOINS  décalage et aller à l'état 35

    exp  aller à l'état 96
    app  aller à l'état 47
    fid  aller à l'état 48


État 65

   43 bool_cond: PO • exp PF

    NUM    décalage et aller à l'état 28
    DEC    décalage et aller à l'état 29
    ID     décalage et aller à l'état 56
    PO     décalage et aller à l'état 31
    NOT    décalage et aller à l'état 34
    MOINS  décalage et aller à l'état 35

    exp  aller à l'état 97
    app  aller à l'état 47
    fid  aller à l'état 48


État 66

   40 cond: if bool_cond • inst elsop

    NUM    décalage et aller à l'état 28
    DEC    décalage et aller à l'état 29
    ID     décalage et aller à l'état 30
    PO     décalage et aller à l'état 31
    IF     décalage et aller à l'état 32
    WHILE  décalage et aller à l'état 33
    NOT    décalage et aller à l'état 34
    MOINS  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 30 ($@2)

    inst   aller à l'état 98
    $@2    aller à l'état 38
    aff    aller à l'état 39
    ida    aller à l'état 40
    cond   aller à l'état 41
    if     aller à l'état 42
    loop   aller à l'état 43
    while  aller à l'état 44
    ret    aller à l'état 45
    exp    aller à l'état 46
    app    aller à l'état 47
    fid    aller à l'état 48


État 67

   47 while_cond: PO • exp PF

    NUM    décalage et aller à l'état 28
    DEC    décalage et aller à l'état 29
    ID     décalage et aller à l'état 56
    PO     décalage et aller à l'état 31
    NOT    décalage et aller à l'état 34
    MOINS  décalage et aller à l'état 35

    exp  aller à l'état 99
    app  aller à l'état 47
    fid  aller à l'état 48

